# review-analysis

./: .gitignore  main.py  pyproject.toml  requirements.txt
app/: main.py
app/api/: chat.py
app/config/: __init__.py  llm.yaml
app/exceptions/: base.py
app/llm/: llm_client.py  llm_config.py
app/logs/: logger.py
app/mongodb/: client.py  reviews.py  reviews_repo.py
app/schemas/: chat.py
app/sqlite/: chat_repo.py  database.py
